Refactoring. No need business logic added.